style(iFrame): fix player overflow in modal

--- a/app/film-database/components/iframe/_fdiFrame.scss
+++ b/app/film-database/components/iframe/_fdiFrame.scss
@@ -30,6 +30,10 @@
     width: 100%;
     aspect-ratio: 16/9;
 
+    .fdiFrame__player {
+      overflow: clip;
+    }
+
     .fdiFrame__player__iframe {
       height: unset;
       aspect-ratio: inherit;
